GNOME Bugzilla – Bug 744421
nm-applet mobile broadband segfault crash
Last modified: 2015-02-16 16:43:53 UTC
I'm connecting to the Internet via a cellular modem, using nm-applet to activate the connection. In version 0.9.x it worked flawlessly, after the update to version 1.0 when i click on the connection name the icon starts spinning before going back to the unconnected icon, then crash. Connection is established, though. If i reopen nm-applet when the connection is enabled it segfaults instantly, i have to use nmtui to manage the connection. However, closing the connection make possible to start nm-applet again (to a new segfault when connection is established). I've already tried to delete and remade the connection (you know, going from 0.9 to 1.0 something could be changed, better be sure) but same happens. Related data Distro: Arch x86 Kernel: 3.18.6-1 (problem goes from previous kernels) nm-applet: 1.0.0-1 networkmanager: 1.0.0-1 modemmanager: 1.4.4-1 Logs Phone: [ 4696.709126] usb 3-3: new high-speed USB device number 5 using ehci-pci [ 4696.828242] cdc_acm 3-3:1.1: ttyACM0: USB ACM device [ 4696.830381] cdc_acm 3-3:1.3: ttyACM1: USB ACM device Crash dmesg: [ 4834.366335] nm-applet[6454]: segfault at 0 ip b677307a sp bf8b6408 error 4 in libglib-2.0.so.0.4200.1[b673d000+125000] Crash console: fish: Job 1, 'nm-applet' terminated by signal SIGSEGV (Address boundary error) Crash gdb: (gdb) run Starting program: /usr/bin/nm-applet warning: Could not load shared library symbols for linux-gate.so.1. Do you need "set solib-search-path" or "set sysroot"? [Thread debugging using libthread_db enabled] Using host libthread_db library "/usr/lib/libthread_db.so.1". [New Thread 0xb5d31b40 (LWP 9157)] [New Thread 0xb53aeb40 (LWP 9158)] (nm-applet:9133): libnm-glib-WARNING **: Error in get_property: Method "Get" with signature "ss" on interface "org.freedesktop.DBus.Properties" doesn't exist [New Thread 0xb48b1b40 (LWP 9159)] Program received signal SIGSEGV, Segmentation fault. 0xb6ffb07a in g_str_hash () from /usr/lib/libglib-2.0.so.0 Bug already open in Arch Linux bugtracker: https://bugs.archlinux.org/task/43576
Created attachment 296795 [details] [review] Patch. If we cannot get a valid icon name for a given access tech, just skip putting access tech info in the icon. Still interested in which was the access tech value that triggered this issue, though, asked the info already downstream.
> Still interested in which was the access tech value that triggered this > issue, though, asked the info already downstream. It was UNKNOWN :). So yeah, ModemManager couldn't retrieve the access tech and it reported unknown. The applet should handle this situation properly, which is what the patch I suggested tries to do.
This has been pushed to git master by danw: https://git.gnome.org/browse/network-manager-applet/commit/?id=cd60dfe6455269d1703024a30bfea169f968299f